src/K8s/courier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courier-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: courierapi
  template:
    metadata:
      labels:
        component: courierapi
    spec:
      containers:
        - name: courierapi
          image: jamaxack/courierapi
          ports:
            - containerPort: 80
