src/K8s/delivery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: deliveryapi
  template:
    metadata:
      labels:
        component: deliveryapi
    spec:
      containers:
        - name: deliveryapi
          image: jamaxack/deliveryapi
          ports:
            - containerPort: 80
