src/K8s/pricing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: pricingapi
  template:
    metadata:
      labels:
        component: pricingapi
    spec:
      containers:
        - name: pricingapi
          image: jamaxack/pricingapi
          ports:
            - containerPort: 80
