src/K8s/delivery-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: delivery-api
  ports:
    - port: 80 #Other pods can access this pod with this port
      targetPort: 80 #Delivery deployment port
