src/K8s/kibana-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: kibana
  ports:
    - port: 5601 #Other pods can access this pod with this port
      targetPort: 5601 #Kibana deployment port
