src/K8s/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kibana
  template:
    metadata:
      labels:
        component: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:7.7.1
          ports:
            - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: kibana
  ports:
    - port: 5601 #Other pods can access this pod with this port
      targetPort: 5601 #Kibana deployment port
