src/K8s/mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mongo
  ports:
    - port: 27017 #Other pods can access this pod with this port
      targetPort: 27017 #Mongo deployment port
