src/K8s/mssql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mssql
  ports:
    - port: 1433 #Other pods can access this pod with this port
      targetPort: 1433 #MS sql deployment port
