src/K8s/mssql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mssql
  template:
    metadata:
      labels:
        component: mssql
    spec:
      volumes:
        - name: mssql-storage
          persistentVolumeClaim:
            claimName: mssql-persistent-volume-claim
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-storage
              mountPath: /var/opt/mssql
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mssql
  ports:
    - port: 1433 #Other pods can access this pod with this port
      targetPort: 1433 #MS sql deployment port
