src/K8s/pricing-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: pricingapi
  ports:
    - port: 80 #Other pods can access this pod with this port
      targetPort: 80 #Courier deployment port
