src/K8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rabbitmq
  template:
    metadata:
      labels:
        component: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 15672
            - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rabbitmq
  ports:
    - port: 15672 #Other pods can access this pod with this port
      targetPort: 15672 #RabbitMQ deployment port
      name: defaultport1
    - port: 5672 #Other pods can access this pod with this port
      targetPort: 5672 #RabbitMQ deployment port
      name: defaultport2
