src/K8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: courier-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: courierapi
  ports:
    - port: 80 #Other pods can access this pod with this port
      targetPort: 80 #Courier deployment port
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: deliveryapi
  ports:
    - port: 80 #Other pods can access this pod with this port
      targetPort: 80 #Delivery deployment port
---
apiVersion: v1
kind: Service
metadata:
  name: pricing-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: pricingapi
  ports:
    - port: 80 #Other pods can access this pod with this port
      targetPort: 80 #Courier deployment port
